...
                          final String jobId = widget.jobPosting.id;
                          jobApplicationService
                              .applyForJob(userId, jobId)
                              .then((_) => {
                                    ScaffoldMessenger.of(context).showSnackBar(
                                      const SnackBar(
                                        content: Text('Application Submitted!'),
                                        backgroundColor: Colors.green,
                                      ),
                                    ),
                                    Navigator.pop(context)
                                  })
                              .catchError((error) => {
...
                        },
                        style: ElevatedButton.styleFrom(
                            backgroundColor: const Color(0xFF2c3a6d),
                            shape: RoundedRectangleBorder(
                                borderRadius: BorderRadius.circular(50.0))),
                        child: const Text(
                          'Apply',
                          style: TextStyle(
                              fontWeight: FontWeight.w600, fontSize: 16.0),
                        ),
                      ),
                    )
                  : Container(),
...
